Tweaks to Sprint 8 login popup, account number tooltip, and customer lookup UI fixes (checkboxes and progress bar on IE/ Firefox)

--- a/UI/static/_css/main.less
+++ b/UI/static/_css/main.less
@@ -2158,8 +2158,8 @@ div[class^="cq-colctrl-lt1-"]{
 }
 /* LOGIN STYLES */
 #login-popup {
+	min-height: 45rem;
 	max-width: 90rem;
-	overflow: inherit;
 
 	input[type="text"]:disabled {
 	 background: #e6e6e6;
@@ -2271,8 +2271,9 @@ div[class^="cq-colctrl-lt1-"]{
 			}
 		}
 	}
-
 	@media (@screen-md-min){
+		min-height: 38rem;
+
 		.dropdown-container{
 			.dropdown-trigger {
 				min-width: 30rem;
@@ -2280,9 +2281,19 @@ div[class^="cq-colctrl-lt1-"]{
 		}
 	}
 }
+
 #login-inactive-popup{
 	text-align: center;
 }
+#login-banner{
+	.inner-card-content{
+		background-color: #003a8f;
+	}
+	.inner-content-wrapper{
+		background-position: 0 -4.25rem;
+	}
+}
+
 /* REFER A FRIEND STYLES */
 .page-wrapper {
 	background: #fff;
@@ -2939,7 +2950,8 @@ div[class^="cq-colctrl-lt1-"]{
 		width: 1.6rem;
 	}
 	.tooltip-text {
-		background: url('/content/dam/ohgre/global/popover-2@2x.jpg') 0 0 no-repeat;
+		background-position: 0 0;
+		background-repeat: no-repeat;
 		background-size: cover;
 		bottom: 3rem;
     color: #fff;
@@ -2964,17 +2976,37 @@ div[class^="cq-colctrl-lt1-"]{
       top: 119px;
       left: 148px;
 		}
-
 		.close-tooltip{
 			font-size: 1.5rem;
 			right: 1rem;
 			top: 1rem;
 		}
-
-		&.gre-tooltip{
+		&.oh-tooltip {
+			background-color: #0f7abf;
+			p {
+				color: #fff;
+				font-size: 1.25rem;
+				text-align: left;
+				a {
+					color: #fff;
+				}
+			}
+			height: 140px;
+			padding: 1rem 2rem 1rem 1rem;
+			.close-tooltip {
+				color: #fff;
+			}
+			&:after{
+				border-color: #0f7abf transparent transparent transparent;
+				top: 140px;
+			}
+		}
+		&.dte-tooltip{
 			background-image:url(/content/dam/ohgre/global/dte-bitmap@2x.jpg);
 		}
-
+		&.gre-tooltip{
+			background: url('/content/dam/ohgre/global/popover-2@2x.jpg');
+		}
 		&.tooltip-open{
 			display: block;
 		}
@@ -4306,10 +4338,12 @@ input{
 			}
 			&[type="checkbox"]{
 				float: left;
+				height: 2.5rem;
 				//height: auto;
 				//width: auto;
 			}
 		}
+
 		.after-checkbox{
 			float: left;
 			width: auto;
@@ -4780,46 +4814,49 @@ input{
 		@media (@screen-xs-min){
 			font-size: 1.2rem;
 		}
-
 		span{
 			padding: 0 0.8rem 0 1.3rem;
 			display: block;
+
+			&:before{
+				content : "";
+				height: 1rem;
+				width: 1rem;
+				left: 0;
+				border-radius: 50%;
+				background-color: #9e9e9e;
+				position: absolute;
+				top: 0.4rem;
+
+				@media (@screen-md-min){
+					height: 2rem;
+					width: 2rem;
+					margin-left: -3rem;
+					left: auto;
+					top: 0rem;
+				}
+			}
 		}
 		&:last-child {
 			span{
 				padding-right: 0;
 			}
 		}
-		&:before{
-			content : "";
-			height: 1rem;
-			width: 1rem;
-			left: 0;
-			border-radius: 50%;
-			background-color: #9e9e9e;
-			position: absolute;
-			top: 0.3rem;
-
-			@media (@screen-md-min){
-				height: 2rem;
-				width: 2rem;
-				margin-left: -2rem;
-				left: auto;
-			}
-		}
 		&.step-complete{
-			&:before{
-				background-color: #05baac !important;
-				font-family: 'fontAwesome';
-				content: "\f00c" !important;
-				color: #fff;
-				font-size: .7rem;
-				text-align: center;
-				line-height: 1.2rem;
+			span{
+				&:before{
+					background-color: #05baac !important;
+					font-family: 'fontAwesome';
+					content: "\f00c" !important;
+					color: #fff;
+					font-size: .7rem;
+					text-align: center;
+					line-height: 1.2rem;
 
-				@media (@screen-md-min){
-					font-size: 1.1rem;
-					line-height: 2.2rem;
+					@media (@screen-md-min){
+						font-size: 1.1rem;
+						line-height: 2.2rem;
+					}
 				}
 			}
 		}
@@ -4844,8 +4881,10 @@ input{
 		}
 		&.active-step{
 			color: @primary_color;
-			&:before{
-				background-color: @primary_color;
+			span{
+				&:before{
+					background-color: @primary_color;
+				}
 			}
 		}
 	}
